api/swimos_form/src/tests/derive/form/tag_no_to_string.stderr
error[E0277]: the trait bound `B: AsRef<str>` is not satisfied
  --> src/tests/derive/form/tag_no_to_string.rs:24:9
   |
21 |     #[derive(Form)]
   |              ---- required by a bound introduced by this call
...
24 |         a: B,
   |         ^ the trait `AsRef<str>` is not implemented for `B`

error[E0277]: the trait bound `B: AsRef<str>` is not satisfied
  --> src/tests/derive/form/tag_no_to_string.rs:24:12
   |
24 |         a: B,
   |            ^ the trait `AsRef<str>` is not implemented for `B`

error[E0277]: the trait bound `B: swimos_form::Tag` is not satisfied
  --> src/tests/derive/form/tag_no_to_string.rs:21:14
   |
21 |     #[derive(Form)]
   |              ^^^^ the trait `swimos_form::Tag` is not implemented for `B`, which is required by `TagRecognizer<B>: Recognizer`
   |
   = help: the trait `Recognizer` is implemented for `TagRecognizer<T>`
   = note: required for `TagRecognizer<B>` to implement `Recognizer`
note: required by a bound in `feed_field`
  --> src/structural/read/recognizer/mod.rs
   |
   | pub fn feed_field<R>(
   |        ---------- required by a bound in this function
...
   |     R: Recognizer,
   |        ^^^^^^^^^^ required by this bound in `feed_field`
   = note: this error originates in the derive macro `Form` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `B: swimos_form::Tag` is not satisfied
  --> src/tests/derive/form/tag_no_to_string.rs:21:14
   |
21 |     #[derive(Form)]
   |              ^^^^ the trait `swimos_form::Tag` is not implemented for `B`, which is required by `TagRecognizer<B>: Recognizer`
   |
   = help: the trait `Recognizer` is implemented for `TagRecognizer<T>`
   = note: required for `TagRecognizer<B>` to implement `Recognizer`
   = note: this error originates in the derive macro `Form` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `B: swimos_form::Tag` is not satisfied
  --> src/tests/derive/form/tag_no_to_string.rs:21:14
   |
21 |     #[derive(Form)]
   |              ^^^^ the trait `swimos_form::Tag` is not implemented for `B`, which is required by `TagRecognizer<B>: Default`
   |
   = help: the trait `Default` is implemented for `TagRecognizer<T>`
   = note: required for `TagRecognizer<B>` to implement `Default`
   = note: this error originates in the derive macro `Form` (in Nightly builds, run with -Z macro-backtrace for more info)
